fixed background-images visible from the backside

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,7 @@ body{
   height: 100%;
   background-color: $card-bgc-color;
   position: absolute;
+  transform:rotateY(0deg);
 }
 .card-item-wrapper-back{
   background-color: $card-bgc-color;
@@ -79,7 +80,7 @@ body{
       .progress {
         width: 75%;
         height: 5px;
-        margin: 0px auto 20px;
+        margin: 0px auto;
         background-color: #f5f5f5;
         border-radius: 8px;
         box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -87,6 +88,7 @@ body{
         backface-visibility: hidden;
 
         .progress-bar {
+          backface-visibility: hidden;
           float: left;
           width: 0%;
           height: 100%;
@@ -98,10 +100,25 @@ body{
           background-color: #159d20;
           transition: width 0.6s ease;
           span{
-            backface-visibility: hidden;
             position: absolute;
-            bottom: 25px;
-            color: black;
+            bottom: 10px;
+            margin-right: 10px;
+            color: white;
+            z-index: 2;
+            &::after{
+              position: absolute;
+              left: -8px;
+              bottom: -7px;
+              content: '';
+              width: 40px;
+              height: 30px;
+              background-image: url('icons/box.svg');
+              background-position: center;
+              background-size: 100%;
+              background-repeat: no-repeat;
+              z-index: -1;
+              backface-visibility: hidden;
+            }
           }
         }
       }
